2014-10-15  Charlie Zender  <zender@uci.edu>

	* Add cnk.cdl to test chunking algorithms

	* NCO 4.4.7 release procedure:
 	Changes since nco-4_4_6: -0->-1, rename bug, cnk xst, fxm
	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1

	* Add cnk_map=nco to assign to current NCO-recommended map

2014-10-13  Charlie Zender  <zender@uci.edu>

	* Always call chunking

	* Stubs for cnk_map = nc4 for default netCDF4 chunking (same as	unchunking for now?)

	* Change links to online discussion forums from, e.g., https://sf.net/projects/nco/forums/forum/9830 to
	https://sf.net/p/nco/discussion/9830 to eliminate new circular reference errors from sf webserver

2014-10-12  Charlie Zender  <zender@uci.edu>

	* Rationalize regression tests with new chunking defaults (xst, xst)

	* Ensure user-specified full chunking paths take precedence over relative paths

	* Simplify nco_cnk_sz_set_trv()

2014-10-10  Charlie Zender  <zender@uci.edu>

	* Fix ncrename regression tests

	* Build in_4.nc from in.nc (not in.cdl due to ncgen chunksize problems and bugs) for regression tests

	* Add numerous regression tests to evaluate nc_rename_var/dim()	behavior.

	* Avoid nc_rename_var/dim() bug in netCDF4 files by avoiding nc_redef()/nc_enddef(). No dice.

2014-10-09  Charlie Zender  <zender@uci.edu>

	* Improve hdr_pad, ncrename documentation

2014-10-08  Charlie Zender  <zender@uci.edu>

	* Add NCO_VERSION for consistency with NC_VERSION

	* Document newly discovered ncrename problems due to netCDF4 bugs http://nco.sf.net/nco.html#bug_nc4_rename

	* Check more error return codes in ncrename.c. Verifies NCO does not ignore any netCDF errors.

2014-10-07  Charlie Zender  <zender@uci.edu>

	* Add regression checks for valid values in renamed coordinates in netCDF4 files

2014-10-02  Charlie Zender  <zender@uci.edu>
