@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_cnk.c,v 1.136 2014-10-15 17:20:30 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_cnk.c,v 1.137 2014-10-15 18:58:42 zender Exp $ */
 
 /* Purpose: NCO utilities for chunking */
 
@@ -1054,7 +1054,10 @@ nco_cnk_sz_set_trv /* [fnc] Set chunksize parameters (GTT version of nco_cnk_sz_
   } /* !nco_cnk_map_lfp */
 
   if(cnk_map == nco_cnk_map_rew){
-    /* Described by Russ Rew at http://www.unidata.ucar.edu/staff/russ/public/chunk_shape_3D.py
+    /* Implementation by Russ Rew at http://www.unidata.ucar.edu/staff/russ/public/chunk_shape_3D.py
+       >>> import cnk
+       >>> cnk.chunk_shape_3D(varShape=(98128,277,349),valSize=4,chunkSize=4096)
+       [33, 5, 6]
        Test case is (time,lat,lon) = 98128 x 277 x 349
        ncks -O -C -4 -D 6 -v four_dmn_rec_var --cnk_map=rew -p ~/nco/data in.nc ~/foo.nc */
     double cnk_val_nbr;
